--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <!-- header top -->
     <section class="topbar">
         <nav class="topnav">
-            
+<div class="mobile-hurmbugar-div" onclick="opennavemobilebtn()">
+    <button class="closnav-btn"><i class="fa-solid fa-bars"></i></button>
+</div>
             <ul class="topul">
                 <li class="topli dropdown">
                     <a href="">Help <span><i class="fa-solid fa-circle-chevron-down"></i></span> </a>
