--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
     <!-- the end of search bar -->
     <!-- category section -->
     <section class="category-and-main">
+        <div class="mobile-cate">
+            <h1 onclick="sidebarclick()"><span ><i class="fa-solid fa-bars"></i></span> Categories</h1>
+        </div>
      <div class="sidebar-holder">
         <div class="category-and-main-div">
             <div class="sidebar">
