--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </div>
             <ul class="topul">
                 <li class="topli dropdown">
-                    <a href="">Help <span><i class="fa-solid fa-circle-chevron-down"></i></span> </a>
+                    <a href="#">Help <span><i class="fa-solid fa-circle-chevron-down"></i></span> </a>
                     <ul class="dorpdownul">
                        <div class="dropdownchildern">
                         <li class="dropdwonli"><a href="">Help center</a></li>
@@ -37,7 +37,7 @@
 
                 <li class="topli"><a href=""><i class="fa-regular fa-heart"></i><span>Wish List</span></a></li>
 
-                <li class="topli account"><a href=""><span><i class="fa-solid fa-user"></i></span> Account</a>
+                <li class="topli account"><a href="#"><span><i class="fa-solid fa-user"></i></span> Account</a>
                     <ul class="accountdropdwonul">
                       <div class="accountdiv">
                         <div class="register-accountdiv">
